--- a/index.html
+++ b/index.html
@@ -7,7 +7,33 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Calculator</h1>
+    <div class="calculator-body">
+        <div class="calculator">
+         <div id="display">0</div>
+         <div id="history">0</div>
+            <div class="buttons">
+                <button class="double-width">C</button>
+                <button class="double-width">AC</button>
+                <button>1</button>
+                <button>2</button>
+                <button>3</button>
+                <button>/</button>
+                <button>4</button>
+                <button>5</button>
+                <button>6</button>
+                <button>X</button>
+                <button>7</button>
+                <button>8</button>
+                <button>9</button>
+                <button>-</button>
+                <button>0</button>
+                <button>.</button>
+                <button>=</button>
+                <button>+</button>
+            </div>
+        </div>
+    </div>
+
     <script src="scripts.js"></script>
 </body>
 </html>
