--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
                 <button>1</button>
                 <button>2</button>
                 <button>3</button>
-                <button>/</button>
+                <button class="button operator">/</button>
                 <button>4</button>
                 <button>5</button>
                 <button>6</button>
-                <button>X</button>
+                <button class="button operator">X</button>
                 <button>7</button>
                 <button>8</button>
                 <button>9</button>
-                <button>-</button>
+                <button class="button operator">-</button>
                 <button>0</button>
                 <button>.</button>
-                <button>=</button>
-                <button>+</button>
+                <button class="button operator">=</button>
+                <button class="button operator">+</button>
             </div>
         </div>
     </div>
